--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -33,7 +33,7 @@
 
                     <li class="nav-item dropdown">
                         <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            Support <b class="caret"></b>
+                            Servicios <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a style="color: black;" class="nav-link" href="#">Asesorías & Proyectos de Ingeniería -
@@ -69,22 +69,25 @@
             <div class="carousel-item active">
                 <img src="../img/slider/servicios-generales.jpg" class="d-block w-100" style="height: 550px;" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <button class="btn btn-primary">ver mas</button>
+                    <h5>Asesorías & Proyectos de Ingeniería -
+                        Arquitectura</h5>
+                    <button class="btn btn-primary botonprincipal">Ver mas</button>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="../img/slider/defensa-civil.jpeg" class="d-block w-100" style="height: 550px;" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <button class="btn btn-primary">ver mas</button>
+                    <h5>Servicios Generales en
+                        Infraestructura & Ingenieria</h5>
+                    <button class="btn btn-primary botonprincipal">Ver mas</button>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="../img/slider/fabricacion.jpeg" class="d-block w-100" style="height: 550px;" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <button class="btn btn-primary">ver mas</button>
+                    <h5>Herramientas para la Construccion</a></li>
+                    </h5>
+                    <button class="btn btn-primary botonprincipal">Ver mas</button>
                 </div>
             </div>
         </div>
