detaller terminados del dia 2

--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar" id="navbarNavDropdown">
 
                 <a class="navbar-brand" href="inicio.html">
                     <div style="text-align: center;">
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="#">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contáctanos</a>
@@ -59,49 +59,44 @@
     </nav>
     <!-- Navbar fin -->
 
-
-    <!-- serviciodos -->
-
-    <h2 class="titulo-servicio">Servicios Generales en Infraestructura & Ingenieria</h2>
+    <!-- contenido -->
 
     <div class="container">
 
-        <div class="servicioTwo">
+        <div class="nosotros-col-2">
 
-            <div>
-                <img src="../img/serviciosDos/primerServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+            <h2>Nosotros</h2>
+
+            <div class="descripcion">
+                <p class="nosotros-texto">AGM Ingenieria y Servicios Generales es una empresa de asesoria y elaboracion de defensa civil que se preocupa por el bienestar de las personas para un mejor sistema</p>
             </div>
 
-            <div class="imagenesServicioDos">
-                <img src="../img/serviciosDos/segundoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
+            <div class="principios row">
+                <div class="cuadroVision col">
+                    <div style="width: 15rem; text-align: center;">
+                        <img src="../img/nosotros/vision.png" class="card-img-top imagenes-nosotros" alt="vision">
+                        <div class="card-body">
+                            <h5 class="card-title nosotros-titulo">Visión</h5>
+                            <p class="card-text nosotros-texto">aqui va la vision</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="cuadroMision col">
+                    <div style="width: 15rem; text-align: center;">
+                        <img src="../img/nosotros/mision.png" class="card-img-top imagenes-nosotros" alt="mision">
+                        <div class="card-body">
+                            <h5 class="card-title nosotros-titulo">Misión</h5>
+                            <p class="card-text nosotros-texto">aqui va la mision</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="imagenesServicioDos">
-                <img src="../img/serviciosDos/tercerServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos">
-                <img src="../img/serviciosDos/cuartoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos">
-                <img src="../img/serviciosDos/quintoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos">
-                <img src="../img/serviciosDos/sextoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos">
-                <img src="../img/serviciosDos/septimoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
 
         </div>
 
     </div>
 
-    <!-- serviciodos -->
+    <!-- contenido fin -->
 
     <!-- Footer -->
 
@@ -208,6 +203,9 @@
 
     <!-- footer final -->
 
+    <!-- link js -->
+    <script src="../js/main.js"></script>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Fontweson -->
@@ -235,4 +233,3 @@
 </body>
 
 </html>
-
