--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-between reducirNavbar" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar" id="navbarNavDropdown">
 
                 <a class="navbar-brand" href="inicio.html">
                     <div style="text-align: center;">
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contáctanos</a>
@@ -117,10 +117,7 @@
                     <img src="../img/card/mantenimiento.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Mantenimiento</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary boton-secundario" style="align-items: center;">Mostrar</a>
+                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonMantenimiento" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
@@ -130,10 +127,7 @@
                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Señales de Seguridad</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary boton-secundario" style="align-items: center;">Mostrar</a>
+                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonSenalDeSeguridad" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
@@ -143,10 +137,7 @@
                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Seguridad y protección</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary boton-secundario" style="align-items: center;">Mostrar</a>
+                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonSeguridadYProteccion" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
@@ -156,10 +147,7 @@
                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Asesoria y Elaboración</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary boton-secundario" style="align-items: center;">Mostrar</a>
+                        <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonAsesoriaYElaboracion" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
@@ -167,6 +155,114 @@
     </div>
 
     <!-- Cards final-->
+
+    <!-- Modal Mantenimiento-->
+    <div class="modal fade" id="botonMantenimiento" tabindex="-1" aria-labelledby="BotonLabelMantenimiento" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title titulo-modal" id="BotonLabelMantenimiento">Servicios</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col">
+                            <img src="../img/card/mantenimiento.jpg" width="250" height="300">
+                        </div>
+                        <div class="col">
+                            <h4 class="arreglar">Mantenimiento</h4>
+                            <p style="justify-content: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum nulla dolorem sit, nemo obcaecati distinctio quae porro nam, ex quas laboriosam omnis itaque ullam perspiciatis cupiditate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal">¡Me interesa!</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Mantenimiento fin -->
+
+    <!-- Modal Señal de seguridad-->
+    <div class="modal fade" id="botonSenalDeSeguridad" tabindex="-1" aria-labelledby="BotonLabelSenalYSeguridad" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title titulo-modal" id="BotonLabelSenalYSeguridad">Servicios</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col">
+                            <img src="../img/card/señales.jpg" width="250" height="280">
+                        </div>
+                        <div class="col">
+                            <h4 class="arreglar">Señales de Seguridad</h4>
+                            <p style="justify-content: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum nulla dolorem sit, nemo obcaecati distinctio quae porro nam, ex quas laboriosam omnis itaque ullam perspiciatis cupiditate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal">¡Me interesa!</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Señal de seguridad fin -->
+
+    <!-- Modal Seguridad y Proteccion -->
+    <div class="modal fade" id="botonSeguridadYProteccion" tabindex="-1" aria-labelledby="BotonLabelSeguridadYProteccion" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title titulo-modal" id="BotonLabelSeguridadYProteccion">Servicios</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col">
+                            <img src="../img/card/proteccioncontraincendios.jpg" width="250" height="250">
+                        </div>
+                        <div class="col">
+                            <h4 class="arreglar">Seguridad y Protección</h4>
+                            <p style="justify-content: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum nulla dolorem sit, nemo obcaecati distinctio quae porro nam, ex quas laboriosam omnis itaque ullam perspiciatis cupiditate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal">¡Me interesa!</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Seguridad y Proteccion fin -->
+
+    <!-- Modal Asesoria y Elaboracion -->
+    <div class="modal fade" id="botonAsesoriaYElaboracion" tabindex="-1" aria-labelledby="BotonLabelAsesoriaYElaboracion" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title titulo-modal" id="BotonLabelAsesoriaYElaboracion">Servicios</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col">
+                            <img src="../img/card/expediente.jpg" width="250" height="250">
+                        </div>
+                        <div class="col">
+                            <h4 class="arreglar">Asesoria y Elaboración</h4>
+                            <p style="justify-content: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum nulla dolorem sit, nemo obcaecati distinctio quae porro nam, ex quas laboriosam omnis itaque ullam perspiciatis cupiditate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal">¡Me interesa!</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Asesoria y Elaboracion fin -->
 
     <!-- Banner -->
     <section class="banner">
@@ -192,7 +288,7 @@
 
     <h2>Clientes</h2>
 
-    <div class="carrusel container">
+    <div class="carrusel container clientes">
         <div class="carrusel-items">
           <div class="carrusel-item">
             <img src="../img/clientes/agroberries.png" alt="" />
@@ -296,40 +392,16 @@
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                             <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                Productos
+                                Servicios
                             </h6>
                             <p>
-                                <a href="#!" class="text-reset">Mantenimiento</a>
+                                <a href="servicioUno.html" class="text-reset pie-de-pagina">Asesorías & Proyectos de Ingeniería - Arquitectura</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">Señales de Seguridad</a>
+                                <a href="servicioDos.html" class="text-reset pie-de-pagina">Servicios Generales en Infraestructura & Ingenieria</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">Seguridad y Protección</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-reset">Asesoría y Elaboración</a>
-                            </p>
-                        </div>
-                        <!-- Grid column -->
-
-                        <!-- Grid column -->
-                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                            <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">
-                                Useful links
-                            </h6>
-                            <p>
-                                <a href="#!" class="text-reset">Pricing</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-reset">Settings</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-reset">Orders</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-reset">Help</a>
+                                <a href="servicioTres.html" class="text-reset pie-de-pagina">Servicio de Alquileres de Equipos & Herramientas para la Construccion</a>
                             </p>
                         </div>
                         <!-- Grid column -->
@@ -357,7 +429,7 @@
             <!-- Copyright -->
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
                 © 2022 Copyright:
-                <a class="text-reset fw-bold" href="https://www.facebook.com/Agm.Ing.y.Ser">AGM - INGENIERIA Y SERVICIOS GENERALES</a>
+                <a class="text-reset fw-bold pie-de-pagina" href="https://www.facebook.com/Agm.Ing.y.Ser">AGM - INGENIERIA Y SERVICIOS GENERALES</a>
             </div>
             <!-- Copyright -->
         </section>
