--- a/Pages/servicioUno.html
+++ b/Pages/servicioUno.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNavDropdown">
 
                 <a class="navbar-brand" href="inicio.html">
                     <div style="text-align: center;">
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contáctanos</a>
@@ -89,8 +89,6 @@
 
     <!-- serviciouno -->
 
-
-
     <!-- Footer -->
 
     <footer class="text-center text-lg-start bg-light text-muted">
@@ -99,29 +97,23 @@
             <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                 <!-- Left -->
                 <div class="me-5 d-none d-lg-block">
-                    <span>Get connected with us on social networks:</span>
+                    <span>Contactate con nosotros a travez de nuestras redes sociales:</span>
                 </div>
                 <!-- Left -->
 
                 <!-- Right -->
                 <div>
-                    <a href="" class="me-4 text-reset">
+                    <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="me-4 text-reset">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="" class="me-4 text-reset">
+                    <a href="https://twitter.com/agmingenieriasg" class="me-4 text-reset">
                         <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="" class="me-4 text-reset">
-                        <i class="fab fa-google"></i>
                     </a>
                     <a href="" class="me-4 text-reset">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="" class="me-4 text-reset">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-                    <a href="" class="me-4 text-reset">
-                        <i class="fab fa-github"></i>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="me-4 text-reset">
+                        <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
                 <!-- Right -->
@@ -137,11 +129,18 @@
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                             <!-- Content -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                <i class="fas fa-gem me-3"></i>Company name
+                                <i class="fas fa-gem me-3"></i>AGM - INGENIERIA Y SERVICIOS GENERALES
                             </h6>
                             <p>
-                                Here you can use rows and columns to organize your footer content. Lorem ipsum
-                                dolor sit amet, consectetur adipisicing elit.
+                                Brindamos servicios relacionados a:
+                                <br/>
+                                    - Consultoria
+                                    <br/>
+                                    - Ingeniería,
+                                    <br/>
+                                    - Ejecución de proyectos de Obras Civiles
+                                    <br/>
+                                    - Entre otros
                             </p>
                         </div>
                         <!-- Grid column -->
@@ -150,40 +149,16 @@
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                             <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                Products
+                                Servicios
                             </h6>
                             <p>
-                                <a href="#!" class="text-reset">Angular</a>
+                                <a href="servicioUno.html" class="text-reset pie-de-pagina">Asesorías & Proyectos de Ingeniería - Arquitectura</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">React</a>
+                                <a href="servicioDos.html" class="text-reset pie-de-pagina">Servicios Generales en Infraestructura & Ingenieria</a>
                             </p>
                             <p>
-                                <a href="#!" class="text-reset">Vue</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-reset">Laravel</a>
-                            </p>
-                        </div>
-                        <!-- Grid column -->
-
-                        <!-- Grid column -->
-                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                            <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">
-                                Useful links
-                            </h6>
-                            <p>
-                                <a href="#!" class="text-reset">Pricing</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-reset">Settings</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-reset">Orders</a>
-                            </p>
-                            <p>
-                                <a href="#!" class="text-reset">Help</a>
+                                <a href="servicioTres.html" class="text-reset pie-de-pagina">Servicio de Alquileres de Equipos & Herramientas para la Construccion</a>
                             </p>
                         </div>
                         <!-- Grid column -->
@@ -194,13 +169,12 @@
                             <h6 class="text-uppercase fw-bold mb-4">
                                 Contact
                             </h6>
-                            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                            <p><i class="fas fa-home me-3"></i> Urb. San Eloy Mz.F Lt.15, Trujillo, Peru, 13001</p>
                             <p>
                                 <i class="fas fa-envelope me-3"></i>
-                                info@example.com
+                                gerencia.agmingenieria@gmail.com
                             </p>
-                            <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                            <p><i class="fas fa-phone me-3"></i> + 51 943 359 199</p>
                         </div>
                         <!-- Grid column -->
                     </div>
@@ -211,8 +185,8 @@
 
             <!-- Copyright -->
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-                © 2021 Copyright:
-                <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+                © 2022 Copyright:
+                <a class="text-reset fw-bold pie-de-pagina" href="https://www.facebook.com/Agm.Ing.y.Ser">AGM - INGENIERIA Y SERVICIOS GENERALES</a>
             </div>
             <!-- Copyright -->
         </section>
