--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -30,12 +30,12 @@
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="inicio.html">Inicio</a>
+                        <a class="nav-link active " aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            Servicios <b class="caret"></b>
+                        <a href="#" class="dropdown-toggle nav-link active" data-toggle="dropdown">
+                            <i class="fas fa-briefcase"></i> Servicios <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a style="color: black;" class="nav-link servicio" href="servicioUno.html">Asesorías & Proyectos de Ingeniería -
@@ -48,16 +48,34 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contáctanos</a>
+                        <a class="nav-link active" href="#"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Navbar fin -->
+
+    <!-- BOton Flotante -->
+    <div class="btncontainer">
+        <input type="checkbox" id="btn-mas">
+        <div class="redes">
+            <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
+            <a href="#" class="fab fa-instagram" target="_blank"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="mailto:gianfernandez.100@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="tel:+51927384236" class="fas fa-phone"></a>
+        </div>
+        <div class="btn-mas">
+            <label for="btn-mas" class="fa fa-plus"></label>
+        </div>
+    </div>
+    <!-- BOton Flotante FIn-->
+
 
     <!-- carrusel -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -176,7 +194,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal">¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -203,7 +221,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal">¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -230,7 +248,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal">¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -257,7 +275,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal">¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
