--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -59,6 +59,24 @@
     </nav>
     <!-- Navbar fin -->
 
+    <!-- BOton Flotante -->
+    <div class="btncontainer">
+        <input type="checkbox" id="btn-mas">
+        <div class="redes">
+            <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
+            <a href="#" class="fab fa-instagram" target="_blank"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="mailto:gianfernandez.100@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="tel:+51927384236" class="fas fa-phone"></a>
+        </div>
+        <div class="btn-mas">
+            <label for="btn-mas" class="fa fa-plus"></label>
+        </div>
+    </div>
+    <!-- BOton Flotante FIn-->
+
+
     <!-- contenido -->
 
     <div class="container">
