--- a/Pages/servicioTres.html
+++ b/Pages/servicioTres.html
@@ -68,35 +68,43 @@
 
         <div class="row servicioThree">
 
-            <div class="col">
+            <div class="col zoom">
+                <a href="..." target="_blank"></a>
                 <img src="../img/servicioTres/primerServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
             </div>
 
-            <div class="col imagenServicioReducida">
+            <div class="col imagenServicioReducida zoom">
+                <a href="..." target="_blank"></a>
                 <img src="../img/servicioTres/segundoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
             </div>
 
-            <div class="col imagenesServicioTres">
+            <div class="col imagenesServicioTres zoom">
+                <a href="..." target="_blank"></a>
                 <img src="../img/servicioTres/tercerServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
             </div>
 
-            <div class="col imagenesServicioTres">
+            <div class="col imagenesServicioTres zoom">
+                <a href="..." target="_blank"></a>
                 <img src="../img/servicioTres/cuartoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
             </div>
 
-            <div class="col imagenesServicioTres">
+            <div class="col imagenesServicioTres zoom">
+                <a href="..." target="_blank"></a>
                 <img src="../img/servicioTres/quintoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
             </div>
 
-            <div class="col imagenesServicioTres">
+            <div class="col imagenesServicioTres zoom">
+                <a href="..." target="_blank"></a>
                 <img src="../img/servicioTres/sextoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
             </div>
 
-            <div class="col imagenesServicioTres">
+            <div class="col imagenesServicioTres zoom">
+                <a href="..." target="_blank"></a>
                 <img src="../img/servicioTres/septimoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
             </div>
 
-            <div class="col imagenesServicioTres">
+            <div class="col imagenesServicioTres zoom">
+                <a href="..." target="_blank"></a>
                 <img src="../img/servicioTres/octavoServicio.jpeg" class="imagen-servicio-uno" width="500" height="310">
             </div>
 
@@ -104,7 +112,25 @@
 
     </div>
 
-    <!-- serviciouno -->
+    <!-- serviciotres -->
+
+    <!-- BOton Flotante -->
+    <div class="btncontainer">
+        <input type="checkbox" id="btn-mas">
+        <div class="redes">
+            <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
+            <a href="#" class="fab fa-instagram" target="_blank"></a>
+            <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
+            <a href="mailto:gianfernandez.100@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="tel:+51927384236" class="fas fa-phone"></a>
+        </div>
+        <div class="btn-mas">
+            <label for="btn-mas" class="fa fa-plus"></label>
+        </div>
+    </div>
+    <!-- BOton Flotante FIn-->
+
 
     <!-- Footer -->
 
