--- a/Pages/servicioUno.html
+++ b/Pages/servicioUno.html
@@ -16,10 +16,10 @@
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
+     <!-- Navbar -->
+     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar" id="navbarNavDropdown">
 
                 <a class="navbar-brand" href="inicio.html">
                     <div style="text-align: center;">
@@ -30,12 +30,12 @@
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="inicio.html">Inicio</a>
+                        <a class="nav-link active " aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            Servicios <b class="caret"></b>
+                        <a href="#" class="dropdown-toggle nav-link active" data-toggle="dropdown">
+                            <i class="fas fa-briefcase"></i> Servicios <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a style="color: black;" class="nav-link servicio" href="servicioUno.html">Asesorías & Proyectos de Ingeniería -
@@ -48,10 +48,10 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contáctanos</a>
+                        <a class="nav-link active" href="#"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                     </li>
                 </ul>
             </div>
