--- a/Pages/servicioUno.html
+++ b/Pages/servicioUno.html
@@ -62,25 +62,24 @@
 
     <!-- serviciouno -->
 
-    <h2 class="titulo-servicio">Asesorías & Proyectos de Ingeniería - Arquitectura</h2>
+    <h2 class="mt-5 mb-5">Asesorías & Proyectos de Ingeniería - Arquitectura</h2>
 
     <div class="container">
 
-        <div class="servicioOne">
+        <div class="d-flex flex-column align-items-center mt-5 mb-5">
 
             <div class="zoom">
-                <a href="..." target="_blank">
+                <a class="" href="..." target="_blank">
                     <img src="../img/serviciosUno/primerServicio.jpeg" class="imagen-servicio-uno" width="700" height="350">
                 </a>
-                
             </div>
 
-            <div class="imagenDosServicioUno zoom">
+            <div class="imagenDosServicioUno zoom flex-shrink-3">
                 <a href="..." target="_blank"></a>
                 <img src="../img/serviciosUno/segundoServicio.jpeg" class="imagen-servicio-uno" width="700" height="350">
             </div>
 
-            <div class="imagenDosServicioUno zoom">
+            <div class="imagenDosServicioUno zoom flex-shrink-3">
                 <a href="..." target="_blank"></a>
                 <img src="../img/serviciosUno/novenoServicio.jpeg" class="imagen-servicio-uno" width="700" height="350">
             </div>
