--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -129,17 +129,17 @@
 
     <h2>Productos a la Venta</h2>
     <div class="container">
-        <div class="row">
-            <div class="col" style="margin-bottom: 20px;">
+        <div class="m-0 row justify-content-center">
+            <div class="col-auto text-center m-1" style="margin-bottom: 20px;">
                 <div class="card" style="width: 15rem; text-align: center;">
                     <img src="../img/card/mantenimiento.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Mantenimiento</h5>
+                        <h5 class="card-title">Mantenimiento del Hogar</h5>
                         <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonMantenimiento" style="align-items: center;">Mostrar</button>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
                     <img src="../img/card/señales.jpg" class="card-img-top"
                         alt="...">
@@ -149,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
                     <img src="../img/card/proteccioncontraincendios.jpg" class="card-img-top"
                         alt="...">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
                     <img src="../img/card/expediente.jpg" class="card-img-top"
                         alt="...">
