detaller corregidos dia 3

--- a/Pages/contactanos.html
+++ b/Pages/contactanos.html
@@ -59,61 +59,8 @@
     </nav>
     <!-- Navbar fin -->
 
-
-
-
-    <!-- serviciodos -->
-
-    <h2 class="mt-5 mb-5">Servicios Generales en Infraestructura & Ingenieria</h2>
-
-    <div class="container">
-
-        <div class="d-flex flex-column align-items-center mt-5 mb-5">
-
-            <div class="zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/primerServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/segundoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/tercerServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/cuartoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/quintoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/sextoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-            <div class="imagenesServicioDos zoom">
-                <a href="..." target="_blank"></a>
-                <img src="../img/serviciosDos/septimoServicio.jpeg" class="imagen-servicio-dos" width="700" height="350">
-            </div>
-
-
-        </div>
-
-    </div>
-
-    <!-- serviciodos -->
-
-    <!-- BOton Flotante -->
-    <div class="btncontainer">
+   <!-- BOton Flotante -->
+   <div class="btncontainer">
         <input type="checkbox" id="btn-mas">
         <div class="redes">
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
@@ -129,6 +76,61 @@
     </div>
     <!-- BOton Flotante FIn-->
 
+    <!-- main -->
+
+    <main class="m-5">
+
+        <h2>Contáctanos</h2>
+
+        <div class="container">
+
+            <div class="m-0 row justify-content-center">
+
+                <div class="col">
+
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7899.426169639965!2d-79.03819326596081!3d-8.130665011132487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ad3ddaf2aacb0f%3A0x1e621c90d5bdcc1b!2sAGM%20Servicios%20Generales!5e0!3m2!1ses!2spe!4v1643852343615!5m2!1ses!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+                </div>
+
+                <div class="col">
+
+                    <div>
+                        <h4 class="subtitulo-contactanos">Dirección:</h4>
+                        <p>Urb. San Eloy Mz.F Lt.15, Trujillo, Peru, 13001</p>
+                    </div>
+
+                    <div>
+                        <h4 class="subtitulo-contactanos">Teléfono:</h4>
+                        <p>+ 51 943 359 199</p>
+                    </div>
+
+                    <div>
+                        <h4 class="subtitulo-contactanos">Correo:</h4>
+                        <p>gerencia.agmingenieria@gmail.com</p>
+                        <p>comercial.agmingenieria@gmail.com</p>
+                        <p>operaciones.agmingenieria@gmail.com</p>
+                    </div>
+
+                    <div>
+                        <h4 class="subtitulo-contactanos">Facebook</h4>
+                        <p><a href="https://www.facebook.com/Agm.Ing.y.Ser">https://www.facebook.com/Agm.Ing.y.Ser</a></p>
+                    </div>
+
+                    <div>
+                        <h4 class="subtitulo-contactanos">Linkedin</h4>
+                        <p><a href="https://www.linkedin.com/company/agm-ingeniería-y-servicios-generales/">https://www.linkedin.com/company/agm-ingeniería-y-servicios-generales/</a></p>
+                    </div>
+                    
+
+                </div>
+                
+            </div>
+
+        </div>
+
+    </main>
+
+    <!-- main fin -->
 
     <!-- Footer -->
 
@@ -208,7 +210,7 @@
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                Contact
+                                Contacto
                             </h6>
                             <p><i class="fas fa-home me-3"></i> Urb. San Eloy Mz.F Lt.15, Trujillo, Peru, 13001</p>
                             <p>
@@ -235,6 +237,9 @@
     </footer>
 
     <!-- footer final -->
+
+    <!-- link js -->
+    <script src="../js/main.js"></script>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -263,4 +268,3 @@
 </body>
 
 </html>
-
