--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar barra-navegacion" id="navbarNavDropdown">
 
                 <a class="navbar-brand" href="inicio.html">
                     <div style="text-align: center;">
@@ -51,7 +51,7 @@
                         <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
+                        <a class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                     </li>
                 </ul>
             </div>
@@ -65,17 +65,16 @@
         <div class="redes">
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
-            <a href="#" class="fab fa-instagram" target="_blank"></a>
+            <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
             <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
-            <a href="mailto:gianfernandez.100@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
-            <a href="tel:+51927384236" class="fas fa-phone"></a>
+            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
         <div class="btn-mas">
             <label for="btn-mas" class="fa fa-plus"></label>
         </div>
     </div>
     <!-- BOton Flotante FIn-->
-
 
     <!-- carrusel -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -132,7 +131,7 @@
         <div class="m-0 row justify-content-center">
             <div class="col-auto text-center m-1" style="margin-bottom: 20px;">
                 <div class="card" style="width: 15rem; text-align: center;">
-                    <img src="../img/card/mantenimiento.jpg" class="card-img-top" alt="...">
+                    <img src="../img/card/mantenimiento.jpg" class="card-img-top cards-imagen" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Mantenimiento del Hogar</h5>
                         <button type="button" data-bs-toggle="modal" class="btn btn-primary boton-secundario" data-bs-target="#botonMantenimiento" style="align-items: center;">Mostrar</button>
@@ -141,7 +140,7 @@
             </div>
             <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
-                    <img src="../img/card/señales.jpg" class="card-img-top"
+                    <img src="../img/card/señales.jpg" class="card-img-top cards-imagen"
                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Señales de Seguridad</h5>
@@ -151,7 +150,7 @@
             </div>
             <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
-                    <img src="../img/card/proteccioncontraincendios.jpg" class="card-img-top"
+                    <img src="../img/card/proteccioncontraincendios.jpg" class="card-img-top cards-imagen"
                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Seguridad y protección</h5>
@@ -161,7 +160,7 @@
             </div>
             <div class="col-auto text-center m-1">
                 <div class="card" style="width: 15rem; text-align: center;">
-                    <img src="../img/card/expediente.jpg" class="card-img-top"
+                    <img src="../img/card/expediente.jpg" class="card-img-top cards-imagen"
                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Asesoria y Elaboración</h5>
@@ -185,10 +184,10 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col">
-                            <img src="../img/card/mantenimiento.jpg" width="250" height="300">
+                            <img src="../img/card/mantenimiento.jpg" class="cards-imagen">
                         </div>
                         <div class="col">
-                            <h4 class="arreglar">Mantenimiento</h4>
+                            <h4 class="arreglar">Mantenimiento del Hogar</h4>
                             <p style="justify-content: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum nulla dolorem sit, nemo obcaecati distinctio quae porro nam, ex quas laboriosam omnis itaque ullam perspiciatis cupiditate</p>
                         </div>
                     </div>
@@ -212,7 +211,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col">
-                            <img src="../img/card/señales.jpg" width="250" height="280">
+                            <img src="../img/card/señales.jpg" class="cards-imagen">
                         </div>
                         <div class="col">
                             <h4 class="arreglar">Señales de Seguridad</h4>
@@ -239,7 +238,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col">
-                            <img src="../img/card/proteccioncontraincendios.jpg" width="250" height="250">
+                            <img src="../img/card/proteccioncontraincendios.jpg" class="cards-imagen">
                         </div>
                         <div class="col">
                             <h4 class="arreglar">Seguridad y Protección</h4>
@@ -266,7 +265,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col">
-                            <img src="../img/card/expediente.jpg" width="250" height="250">
+                            <img src="../img/card/expediente.jpg" class="cards-imagen">
                         </div>
                         <div class="col">
                             <h4 class="arreglar">Asesoria y Elaboración</h4>
@@ -283,8 +282,8 @@
     <!-- Modal Asesoria y Elaboracion fin -->
 
     <!-- Banner -->
-    <section class="banner">
-        <div class="container" style="margin-bottom: 35px; margin-top: 35px;">
+    <section class="banner" style="margin-bottom: 35px; margin-top: 35px;">
+        <div class="container" >
             <div class="row" style="text-align: center;">
                 <div class="regran-texto col align-self-center">
                     <h3 style="text-align: left;"><b>AGM</b> Ingenieria y Servicios Generales</h3>
@@ -428,7 +427,7 @@
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                Contact
+                                Contacto
                             </h6>
                             <p><i class="fas fa-home me-3"></i> Urb. San Eloy Mz.F Lt.15, Trujillo, Peru, 13001</p>
                             <p>
@@ -436,6 +435,8 @@
                                 gerencia.agmingenieria@gmail.com
                             </p>
                             <p><i class="fas fa-phone me-3"></i> + 51 943 359 199</p>
+                            <p><i class="fas fa-phone me-3"></i> + 51 923 520 364</p>
+                            
                         </div>
                         <!-- Grid column -->
                     </div>
