--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse d-flex justify-content-around barra-navegacion reducirNavbar" id="navbarNavDropdown">
 
                 <a class="navbar-brand" href="inicio.html">
                     <div style="text-align: center;">
@@ -51,7 +51,7 @@
                         <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
+                        <a class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                     </li>
                 </ul>
             </div>
@@ -65,10 +65,10 @@
         <div class="redes">
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
-            <a href="#" class="fab fa-instagram" target="_blank"></a>
+            <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
             <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
-            <a href="mailto:gianfernandez.100@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
-            <a href="tel:+51927384236" class="fas fa-phone"></a>
+            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
         <div class="btn-mas">
             <label for="btn-mas" class="fa fa-plus"></label>
@@ -86,29 +86,58 @@
             <h2>Nosotros</h2>
 
             <div class="descripcion">
-                <p class="nosotros-texto">AGM Ingenieria y Servicios Generales es una empresa de asesoria y elaboracion de defensa civil que se preocupa por el bienestar de las personas para un mejor sistema</p>
+                <p class="nosotros-texto">AGM Ingenieria y Servicios Generales es una empresa que presenta los servicios en los rubros relacionados a la Consultoría, Ingeniería, Implementación de Equipos de Seguridad, Ejecución de proyectos de Obras Civiles para el sector Público y Privado.</p>
             </div>
 
-            <div class="principios row">
-                <div class="cuadroVision col">
-                    <div style="width: 15rem; text-align: center;">
+            <div class="principios row justify-content-center">
+                <div class="cuadroVision col-auto">
+                    <div style="width: 25rem; text-align: center;">
                         <img src="../img/nosotros/vision.png" class="card-img-top imagenes-nosotros" alt="vision">
                         <div class="card-body">
                             <h5 class="card-title nosotros-titulo">Visión</h5>
-                            <p class="card-text nosotros-texto">aqui va la vision</p>
+                            <p class="card-text nosotros-texto">Lograr el liderazgo en el mercado nacional, posicionando a la empresa en la mente de nuestros clientes objetivos, a través del cumplimiento de nuestra metas trazadas</p>
                         </div>
                     </div>
                 </div>
-                <div class="cuadroMision col">
-                    <div style="width: 15rem; text-align: center;">
+                <div class="cuadroVision col-auto">
+                    <div style="width: 25rem; text-align: center;">
                         <img src="../img/nosotros/mision.png" class="card-img-top imagenes-nosotros" alt="mision">
                         <div class="card-body">
                             <h5 class="card-title nosotros-titulo">Misión</h5>
-                            <p class="card-text nosotros-texto">aqui va la mision</p>
+                            <p class="card-text nosotros-texto">Resolver la necesidad en Proyectos de Ingeniería y Supervisión de Obras, comprometidos con los estándares de calidad, seguridad y medio ambiente en proyectos y edificaciones de acuerdo al Reglamento Nacional de Edificaciones, Código Nacional de Electricidad, normas de Seguridad Contra Incendios y normas exigidas por Defensa Civil - INDECI.</p>
                         </div>
                     </div>
                 </div>
             </div>
+
+        </div>
+
+        <hr>
+
+        <div class="row justify-content-evenly m-5">
+
+            <div class="col-auto w-50">
+
+                <div class="valores-titulo">
+                    <h5 class="nosotros-titulo">Valores</h5>
+                </div>
+    
+                <div class="valores-definicion">
+                    <p class="nosotros-texto"><b>Calidad:</b> Al brindar nuestros servicios.</p>
+                    <p class="nosotros-texto"><b>Honestidad y Responsabilidad:</b> Al atender a nuestros cliente; somos transparentes, honestos, directos y cumplimos con lo ofrecido.</p>
+                    <p class="nosotros-texto"><b>Desarrollo de los trabajadores:</b> Nos preocupamos por el desarrollo profesional nuestros colaboradores.</p>
+                    <p class="nosotros-texto"><b>Pasión por los clientes:</b> Ponemos a nuestros clientes en primer lugar.</p>
+                    <p class="nosotros-texto"><b>Logros y contribución:</b> La contribución de cada persona es fundamental para nuestro éxito.</p>
+                </div>
+
+            </div>
+
+            <div class="col-auto mt-5">
+
+                <img class="imagen-nosotros" src="../img/nosotros/nosotros.png">
+
+            </div>
+
 
         </div>
 
@@ -202,6 +231,7 @@
                                 gerencia.agmingenieria@gmail.com
                             </p>
                             <p><i class="fas fa-phone me-3"></i> + 51 943 359 199</p>
+                            <p><i class="fas fa-phone me-3"></i> + 51 923 520 364</p>
                         </div>
                         <!-- Grid column -->
                     </div>
