--- a/Pages/servicioUno.html
+++ b/Pages/servicioUno.html
@@ -19,7 +19,7 @@
      <!-- Navbar -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: blue; margin-bottom: 0px;">
         <div class="container-fluid">
-            <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse d-flex justify-content-around barra-navegacion reducirNavbar" id="navbarNavDropdown">
 
                 <a class="navbar-brand" href="inicio.html">
                     <div style="text-align: center;">
@@ -51,7 +51,7 @@
                         <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
+                        <a class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
                     </li>
                 </ul>
             </div>
@@ -69,9 +69,8 @@
         <div class="d-flex flex-column align-items-center mt-5 mb-5">
 
             <div class="zoom">
-                <a class="" href="..." target="_blank">
-                    <img src="../img/serviciosUno/primerServicio.jpeg" class="imagen-servicio-uno" width="700" height="350">
-                </a>
+                <a class="" href="..." target="_blank"></a>
+                <img src="../img/serviciosUno/primerServicio.jpeg" class="imagen-servicio-uno" width="700" height="350">
             </div>
 
             <div class="imagenDosServicioUno zoom flex-shrink-3">
@@ -91,15 +90,15 @@
     <!-- serviciouno -->
 
     <!-- BOton Flotante -->
-    <div class="btncontainer">
+   <div class="btncontainer">
         <input type="checkbox" id="btn-mas">
         <div class="redes">
             <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/agmingenieriasg" class="fab fa-twitter" target="_blank"></a>
-            <a href="#" class="fab fa-instagram" target="_blank"></a>
+            <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="fab fa-instagram" target="_blank"></a>
             <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="fab fa-whatsapp" target="_blank"></a>
-            <a href="mailto:gianfernandez.100@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
-            <a href="tel:+51927384236" class="fas fa-phone"></a>
+            <a href="mailto:gerencia.agmingenieria@gmail.com?subject=Quiero%20mas%20información%20sobre%20el%20producto&body=Hola%20te%20contacto%20desde%20tu%20WebSite%20y%20me%20interesa%20el%20producto....!" class="fas fa-envelope"></a>
+            <a href="tel:+51943359199" class="fas fa-phone"></a>
         </div>
         <div class="btn-mas">
             <label for="btn-mas" class="fa fa-plus"></label>
@@ -193,6 +192,7 @@
                                 gerencia.agmingenieria@gmail.com
                             </p>
                             <p><i class="fas fa-phone me-3"></i> + 51 943 359 199</p>
+                            <p><i class="fas fa-phone me-3"></i> + 51 923 520 364</p>
                         </div>
                         <!-- Grid column -->
                     </div>
