detalles corregidos dia 3 fin

--- a/Pages/servicioDos.html
+++ b/Pages/servicioDos.html
@@ -144,16 +144,16 @@
 
                 <!-- Right -->
                 <div>
-                    <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="me-4 text-reset">
+                    <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="me-4 text-reset" target="_blank"> 
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://twitter.com/agmingenieriasg" class="me-4 text-reset">
+                    <a href="https://twitter.com/agmingenieriasg" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="" class="me-4 text-reset">
+                    <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="me-4 text-reset">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
