--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp"> ¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -220,7 +220,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp"> ¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp"> ¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -274,7 +274,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp"> ¡Me interesa!</a>
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, El producto me interesa!" type="button" class="btn btn-success boton-modal fab fa-whatsapp" target="_blank"> ¡Me interesa!</a>
                 </div>
             </div>
         </div>
@@ -363,16 +363,16 @@
 
                 <!-- Right -->
                 <div>
-                    <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="me-4 text-reset">
+                    <a href="https://www.facebook.com/Agm.Ing.y.Ser" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://twitter.com/agmingenieriasg" class="me-4 text-reset">
+                    <a href="https://twitter.com/agmingenieriasg" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="" class="me-4 text-reset">
+                    <a href="https://www.instagram.com/agmingenieria/?hl=es-la" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="me-4 text-reset">
+                    <a href="https://api.whatsapp.com/send?phone=+51943359199&text=Hola, Nececito mas informacion!" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
